--- a/index.html
+++ b/index.html
@@ -1,164 +1,138 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>539 智能分析系統 - Pro 量化決策版</title>
-<style>
-:root {
-    --primary: #0f172a; --secondary: #1e293b; --accent: #38bdf8; --gold: #fbbf24;
-    --success: #22c55e; --bg: #0f172a; --card-bg: rgba(30, 41, 59, 0.7);
-    --text: #f1f5f9; --glass: rgba(255, 255, 255, 0.03);
-}
-body { 
-    font-family: 'PingFang TC', 'Microsoft JhengHei', sans-serif; background-color: var(--bg);
-    background-image: radial-gradient(circle at 50% 0%, #1e293b 0%, #0f172a 100%);
-    margin: 0; padding: 20px 15px; color: var(--text); min-height: 100vh; line-height: 1.6;
-}
-.container { max-width: 1000px; margin: 0 auto; }
-header { text-align: center; margin-bottom: 30px; padding: 10px 0; }
-header h1 { font-size: 2.2rem; margin: 0; color: var(--accent); font-weight: 900; text-shadow: 0 0 20px rgba(56, 189, 248, 0.3); letter-spacing: 2px; }
-header p { font-size: 0.85rem; margin: 8px 0 0; opacity: 0.5; letter-spacing: 3px; font-weight: 300; }
-.card { background: var(--card-bg); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.08); padding: 24px; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.4); margin-bottom: 25px; }
-.upload-section { border: 2px dashed rgba(56, 189, 248, 0.2); transition: 0.3s; padding: 40px 20px; text-align: center; }
-button { background: linear-gradient(135deg, var(--accent), #0284c7); color: white; border: none; padding: 16px 30px; border-radius: 14px; font-weight: 800; font-size: 1.1rem; cursor: pointer; transition: 0.3s; width: 100%; }
-.dashboard-grid { display: grid; grid-template-columns: 1fr; gap: 20px; }
-@media (min-width: 768px) { .dashboard-grid { grid-template-columns: 1fr 1fr; } }
-h3 { font-size: 1.2rem; margin-top: 0; margin-bottom: 20px; color: var(--gold); display: flex; align-items: center; font-weight: 700; }
-h3::before { content: ''; display: inline-block; width: 4px; height: 20px; background: var(--gold); margin-right: 12px; border-radius: 2px; }
-table { width: 100%; border-collapse: collapse; }
-th { text-align: center; font-size: 0.75rem; opacity: 0.4; padding: 12px; font-weight: normal; }
-td { padding: 15px 5px; border-bottom: 1px solid rgba(255,255,255,0.03); text-align: center; }
-.ball { display: inline-block; width: 36px; height: 36px; line-height: 36px; text-align: center; border-radius: 50%; background: radial-gradient(circle at 30% 30%, #475569, #1e293b); margin: 3px; font-weight: 800; color: var(--accent); }
-.strategy-block { background: var(--glass); padding: 20px; margin: 15px 0; border-radius: 18px; border-left: 4px solid var(--accent); cursor: pointer; }
-.logic-detail { display: none; margin-top: 10px; font-size: 0.85rem; color: #94a3b8; background: rgba(0,0,0,0.2); padding: 10px; border-radius: 10px; }
-.rate-badge { float: right; background: rgba(56, 189, 248, 0.15); color: var(--accent); padding: 2px 10px; border-radius: 10px; font-size: 0.8rem; }
-.inline-input { width: 55px; height: 55px; text-align: center; border-radius: 12px; border: 1px solid #334155; background: #0f172a; color: var(--gold); font-size: 1.2rem; font-weight: bold; }
-.chart-container { height: 300px; }
-</style>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>539 智能量化分析系統</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        :root {
+            --primary: #0f172a;    --secondary: #1e293b;
+            --accent: #38bdf8;     --gold: #fbbf24;
+            --success: #22c55e;    --text: #f1f5f9;
+            --card-bg: rgba(30, 41, 59, 0.7);
+        }
+
+        body {
+            font-family: 'PingFang TC', sans-serif;
+            background: var(--primary);
+            background-image: radial-gradient(circle at 50% 0%, #1e293b 0%, #0f172a 100%);
+            color: var(--text);
+            margin: 0; padding: 20px;
+            min-height: 100vh;
+        }
+
+        .container { max-width: 1000px; margin: 0 auto; }
+
+        /* 頂部標題 */
+        header { text-align: center; margin-bottom: 30px; }
+        header h1 { font-size: 2rem; color: var(--accent); margin: 0; letter-spacing: 2px; }
+
+        /* 通用卡片設計 */
+        .card {
+            background: var(--card-bg);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(255,255,255,0.1);
+            padding: 24px; border-radius: 20px;
+            margin-bottom: 20px;
+        }
+
+        /* 上傳區塊 */
+        .upload-zone {
+            border: 2px dashed rgba(56, 189, 248, 0.3);
+            text-align: center; padding: 40px;
+            cursor: pointer; transition: 0.3s;
+        }
+        .upload-zone:hover { border-color: var(--accent); background: rgba(56, 189, 248, 0.05); }
+
+        /* 按鈕 */
+        button {
+            background: linear-gradient(135deg, var(--accent), #0284c7);
+            color: white; border: none; padding: 15px 30px;
+            border-radius: 12px; font-weight: bold; cursor: pointer;
+            width: 100%; font-size: 1.1rem;
+        }
+
+        /* 數據儀表板佈局 */
+        .dashboard-grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 20px;
+        }
+        @media (min-width: 768px) {
+            .dashboard-grid { grid-template-columns: 1fr 1fr; }
+        }
+
+        /* 號碼球樣式 */
+        .ball {
+            display: inline-block; width: 36px; height: 36px; line-height: 36px;
+            text-align: center; border-radius: 50%;
+            background: #1e293b; margin: 4px;
+            font-weight: 800; color: var(--accent);
+            border: 1px solid rgba(56, 189, 248, 0.2);
+        }
+
+        /* 表格樣式 */
+        table { width: 100%; border-collapse: collapse; }
+        th { font-size: 0.8rem; opacity: 0.5; padding: 10px; border-bottom: 1px solid rgba(255,255,255,0.1); }
+        td { padding: 12px 5px; text-align: center; border-bottom: 1px solid rgba(255,255,255,0.05); }
+
+        /* 推薦組合區塊 */
+        .strategy-item {
+            background: rgba(255,255,255,0.03);
+            padding: 20px; border-radius: 15px;
+            border-left: 4px solid var(--accent);
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 <body>
 
 <div class="container">
-    <header><h1>539 QUANT PRO</h1><p>ADVANCED ANALYTICS • DATA DRIVEN</p></header>
+    <header>
+        <h1>539 QUANT PRO</h1>
+        <p style="opacity: 0.5;">數據驅動 • 智能過濾系統</p>
+    </header>
 
-    <div class="card upload-section">
+    <div class="card upload-zone" onclick="document.getElementById('csvFile').click()">
         <input type="file" id="csvFile" accept=".csv" style="display: none;">
-        <label for="csvFile" id="fileLabel" style="display: block; padding: 15px; background: var(--secondary); border-radius: 10px; cursor: pointer; margin-bottom: 20px;">點擊選取歷史數據 CSV</label>
-        <button onclick="runAll()">啟動量化決策分析</button>
+        <div id="fileLabel" style="color: var(--accent);">[ 點擊載入歷史 CSV 數據檔案 ]</div>
+    </div>
+    <button onclick="startAnalysis()">執行一鍵量化分析</button>
+
+    <div style="margin-top: 25px;" class="dashboard-grid">
+        <div class="card">
+            <h3>近期開獎歷史</h3>
+            <div id="historyDisplay"></div>
+        </div>
+
+        <div class="card">
+            <h3>策略回測表現 (近60期)</h3>
+            <div id="backtestDisplay">
+                <p style="opacity: 0.3; text-align: center;">尚未有數據</p>
+            </div>
+        </div>
     </div>
 
-    <div class="dashboard-grid">
-        <div id="history" class="card"><h3>近期開獎歷史</h3></div>
-        <div id="stats_area" class="card"><h3>策略回測表現</h3><div id="stats_table"></div></div>
+    <div class="card">
+        <h3>AI 推薦高勝率組合</h3>
+        <div id="recommendationDisplay">
+            <p style="opacity: 0.3; text-align: center;">請先完成數據分析</p>
+        </div>
     </div>
 
-    <div id="results" class="card"><h3>智能推荐組合 (點擊策略查看邏輯)</h3></div>
-
-    <div class="card chart-container">
-        <h3>機率分布趨勢 (綜合評分)</h3>
-        <canvas id="trendChart"></canvas>
+    <div class="card" style="height: 300px;">
+        <h3>數據機率分布趨勢</h3>
+        <canvas id="mainChart"></canvas>
     </div>
 </div>
 
 <script>
-let HIST_DATA = [];
-let chartInstance = null;
-
-const RULES = [
-    { name: "保守熱號型", type: "hot", desc: "鎖定近期頻率最高的號碼規律。", logic: "Top 15 頻率號碼加權隨機" },
-    { name: "冷號反彈型", type: "cold", desc: "分析遺漏期數（Gap），捕捉回補點。", logic: "極限遺漏 Top 10 號碼隨機" },
-    { name: "冷熱平衡型", type: "mix", desc: "混合 3 熱 2 冷，規避單一趨勢風險。", logic: "熱號 (3) + 冷號 (2) 組合" }
-];
-
-async function runAll() {
-    const file = document.getElementById("csvFile").files[0];
-    if(!file) return alert("請選取 CSV 檔案");
-    HIST_DATA = parseCSV(await file.text());
-    if(HIST_DATA.length < 30) return alert("數據量不足");
-
-    showHistory();
-    const stats = doBacktest();
-    renderStatsTable(stats);
-    renderResults();
-    drawChart(stats);
-}
-
-function parseCSV(text) {
-    return text.trim().split("\n").slice(1).map(l => {
-        const p = l.split(",");
-        return { date: p[0], nums: p.slice(2, 7).map(n => parseInt(n)).sort((a,b)=>a-b) };
-    }).filter(x => !isNaN(x.nums[0]));
-}
-
-function calculateGaps(data) {
-    const gaps = {};
-    for(let i=1; i<=39; i++) gaps[i] = data.length;
-    data.forEach((d, idx) => d.nums.forEach(n => gaps[n] = data.length - 1 - idx));
-    return gaps;
-}
-
-function generateSmartPick(data, ruleType) {
-    const gaps = calculateGaps(data);
-    const sorted = Object.entries(gaps).sort((a,b) => a[1] - b[1]); 
-    const hots = sorted.slice(0, 15).map(x => parseInt(x[0]));
-    const colds = sorted.slice(-10).map(x => parseInt(x[0]));
-
-    let pick = [];
-    if(ruleType === 'hot') pick = hots.sort(() => 0.5 - Math.random()).slice(0,5);
-    else if(ruleType === 'cold') pick = colds.sort(() => 0.5 - Math.random()).slice(0,5);
-    else pick = [...hots.sort(() => 0.5 - Math.random()).slice(0,3), ...colds.sort(() => 0.5 - Math.random()).slice(0,2)];
-    return pick.sort((a,b) => a - b);
-}
-
-function doBacktest() {
-    return RULES.map(rule => {
-        let h2 = 0, h3 = 0;
-        const range = 60;
-        for(let i = HIST_DATA.length - range; i < HIST_DATA.length - 1; i++) {
-            const pick = generateSmartPick(HIST_DATA.slice(0, i), rule.type);
-            const matches = HIST_DATA[i+1].nums.filter(n => pick.includes(n)).length;
-            if(matches === 2) h2++; else if(matches >= 3) h3++;
-        }
-        return { name: rule.name, h2, h3, score: (h2 + h3*10) / 6 };
-    });
-}
-
-function renderStatsTable(stats) {
-    let html = "<table><tr><th>策略</th><th>二星</th><th>三星+</th><th>評分</th></tr>";
-    stats.forEach(s => html += `<tr><td>${s.name}</td><td>${s.h2}</td><td>${s.h3}</td><td style="color:var(--accent)">${s.score.toFixed(1)}</td></tr>`);
-    document.getElementById("stats_table").innerHTML = html + "</table>";
-}
-
-function renderResults() {
-    const res = document.getElementById("results");
-    res.innerHTML = "<h3>智能推荐組合</h3>";
-    RULES.forEach(rule => {
-        const pick = generateSmartPick(HIST_DATA, rule.type);
-        const div = document.createElement("div");
-        div.className = "strategy-block";
-        div.onclick = function() { const d = this.querySelector(".logic-detail"); d.style.display = d.style.display === 'block' ? 'none' : 'block'; };
-        div.innerHTML = `<strong>${rule.name}</strong><span class="rate-badge">量化強度：高</span><div style="margin-top:10px">${pick.map(n => `<span class="ball">${String(n).padStart(2,'0')}</span>`).join("")}</div><div class="logic-detail">邏輯：${rule.logic}<br>${rule.desc}</div>`;
-        res.appendChild(div);
-    });
-}
-
-function showHistory() {
-    let html = "<table>";
-    HIST_DATA.slice(-5).reverse().forEach(d => html += `<tr><td style="opacity:0.5">${d.date.slice(5)}</td><td>${d.nums.map(n => `<span class="ball">${String(n).padStart(2,'0')}</span>`).join("")}</td></tr>`);
-    document.getElementById("history").innerHTML = "<h3>近期開獎歷史</h3>" + html + "</table>";
-}
-
-function drawChart(stats) {
-    const ctx = document.getElementById('trendChart').getContext('2d');
-    if(chartInstance) chartInstance.destroy();
-    chartInstance = new Chart(ctx, {
-        type: 'bar',
-        data: { labels: stats.map(s => s.name), datasets: [{ label: '策略表現評分', data: stats.map(s => s.score), backgroundColor: '#38bdf8' }] },
-        options: { responsive: true, maintainAspectRatio: false }
-    });
-}
+    // JS 邏輯將在此分段開發
+    function startAnalysis() {
+        console.log("分析啟動...");
+    }
 </script>
+
 </body>
 </html>
